cfgs/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o cfgs/k8s
    kompose.service.type: loadbalancer
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o cfgs/k8s
        kompose.service.type: loadbalancer
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/cluster-network: "true"
        io.kompose.service: api
    spec:
      containers:
        - env:
            - name: PYTHONUNBUFFERED
              value: "1"
          image: jkleve/playlist-manager:latest
          name: api
          ports:
            - containerPort: 5001
          resources: {}
      restartPolicy: Always
status: {}
