cfgs/k8s/plivo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o cfgs/k8s
    kompose.service.type: loadbalancer
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: plivo
  name: plivo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: plivo
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o cfgs/k8s
        kompose.service.type: loadbalancer
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/cluster-network: "true"
        io.kompose.service: plivo
    spec:
      containers:
        - env:
            - name: PYTHONUNBUFFERED
              value: "1"
          image: jkleve/plivo:latest
          name: plivo
          ports:
            - containerPort: 5002
          resources: {}
      restartPolicy: Always
status: {}
