cfgs/k8s/api-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o cfgs/k8s
    kompose.service.type: loadbalancer
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: api-tcp
  name: api-tcp
spec:
  ports:
    - name: "5001"
      port: 5001
      targetPort: 5001
  selector:
    io.kompose.service: api
  type: LoadBalancer
status:
  loadBalancer: {}
