cfgs/k8s/cluster-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: cluster-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/cluster-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/cluster-network: "true"
